plugins {
    id 'java-library'
    id 'maven-publish'
    id 'application'
}

ext {
    tinyLogVersion  = '2.7.0'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api 'com.esotericsoftware:kryo:5.6.2'
    api('net.openhft:chronicle-queue:2026.1') {
        exclude group: 'org.xerial.snappy', module: 'snappy-java'
    }
    api('net.openhft:chronicle-map:2026.1') {
        exclude group: 'com.thoughtworks.xstream', module: 'xstream'
    }
    api 'com.jsoniter:jsoniter:0.9.23'
    api 'org.mapdb:mapdb:3.1.0'
    api "org.tinylog:tinylog-impl:$tinyLogVersion"
    api "org.tinylog:tinylog-api:$tinyLogVersion"
    runtimeOnly "org.tinylog:slf4j-tinylog:$tinyLogVersion"
    testImplementation 'org.apache.logging.log4j:log4j-1.2-api:2.23.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.2'
}

application {
    mainClass = 'chronicle.db.Server'
    applicationDefaultJvmArgs = [
                "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
                "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
                "--add-opens=java.base/java.lang=ALL-UNNAMED",
                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                "--add-opens=java.base/java.io=ALL-UNNAMED",
                "--add-opens=java.base/java.util=ALL-UNNAMED",
                "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED",
                ]
}

group = 'chronicle.db'
version = '0.0.1-RELEASE'
description = 'chronicle-db'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

task copyDependencies(type: Copy) {
    from(configurations.runtimeClasspath)
    into("build/libs")
}

build.dependsOn(copyDependencies)

jar {
    processResources.exclude('*')
}